--- a/src/assets/scss/admin.scss
+++ b/src/assets/scss/admin.scss
@@ -1064,6 +1064,9 @@
 	.el-dialog__body {
 		padding: 15px 15px !important;
 	}
+	.el-date-editor {
+		width: 100%;
+	}
 	.dynamicForm {
 		.row {
 			margin-bottom: 10px;
