big update form

--- a/src/assets/scss/admin.scss
+++ b/src/assets/scss/admin.scss
@@ -1203,6 +1203,9 @@
 			line-height: initial;
 		}
 	}
+	.el-input-number{
+		width: 100%;
+	}
 	@media (max-width: 1199px) {
 		#main {
 			padding: 20px;
