--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -363,7 +363,7 @@
   .card_logo {
     border-radius: 50%;
     position: absolute;
-    top: 27%;
+    top: 28.5%;
     left: 50%;
     transform: translate(-50%, 0);
     z-index: 1;
@@ -1002,5 +1002,13 @@
     75% {
       color: purple;
     }
+  }
+
+  .gioiThieuPortal {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    max-height: 9rem;
   }
 }
