--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -806,21 +806,28 @@
 
   .owl-theme .owl-nav {
     position: absolute;
-    top: 30%;
+    top: 5%;
     right: 0;
     left: 0;
     display: flex !important;
     justify-content: space-between;
     align-items: center;
     text-align: unset;
+    opacity: 0.5;
+  }
+
+  .owl-theme .owl-nav {
+    &:hover {
+      opacity: 1;
+    }
   }
 
   .owl_text {
-    line-height: 1.6rem;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
+    max-height: 5rem;
   }
 
   @media screen and (max-width: 600px) {
