--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -181,20 +181,52 @@
     color: black;
   }
 
-  .navbar_link {
-    color: black;
-    text-decoration: none;
+  .la {
+    opacity: 0.8;
     cursor: pointer;
   }
 
-  .navbar_link:hover {
-    $colors: red, navy, blueviolet, green, blue, purple;
+  .lage {
+    opacity: 1;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: radial-gradient(
+      circle,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000
+    );
+  }
 
-    @for $i from 1 through length($colors) {
-      &:nth-child(#{length($colors)}n + #{$i}) {
-        color: lighten(nth($colors, $i), 20%);
-      }
-    }
+  .la:hover {
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: radial-gradient(
+      circle,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000
+    );
   }
 
   .header_bottom_logo_option {
@@ -337,7 +369,7 @@
   /* main sub detail */
 
   .main_sub_bd {
-    padding: 20px 40px 40px 40px;
+    padding: 20px 18px 20px 18px;
   }
 
   .main_sub_detal {
@@ -1017,5 +1049,31 @@
     -webkit-line-clamp: 6;
     -webkit-box-orient: vertical;
     max-height: 9rem;
+  }
+
+  .qb {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+
+  .qc {
+    border-bottom-left-radius: 5px;
+  }
+
+  .qd {
+    border-bottom-right-radius: 5px;
+  }
+
+  .main_panel {
+    display: flex;
+    justify-content: center;
+    gap: 10rem;
+  }
+
+  @media screen and (max-width: 768px) {
+    .main_panel {
+      flex-direction: column;
+      gap: 2rem;
+    }
   }
 }
