--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1,6 +1,9 @@
 #app-portal {
   // start footer
-
+  font-family: "SF Pro Display";
+  .tieu-de {
+    font-weight: 700 !important;
+  }
   .text_f {
     color: white;
     text-decoration: none;
@@ -123,7 +126,7 @@
   // start header
 
   .headers {
-    height: 15vh;
+    height: 12vh;
     background-color: white;
   }
 
@@ -181,20 +184,52 @@
     color: black;
   }
 
-  .navbar_link {
-    color: black;
-    text-decoration: none;
+  .la {
+    // opacity: 0.8;
     cursor: pointer;
   }
 
-  .navbar_link:hover {
-    $colors: red, navy, blueviolet, green, blue, purple;
+  .lage {
+    opacity: 1;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: radial-gradient(
+      circle,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000
+    );
+  }
 
-    @for $i from 1 through length($colors) {
-      &:nth-child(#{length($colors)}n + #{$i}) {
-        color: lighten(nth($colors, $i), 20%);
-      }
-    }
+  .la:hover {
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: radial-gradient(
+      circle,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #000000,
+      #1d1516,
+      #000000
+    );
   }
 
   .header_bottom_logo_option {
@@ -281,6 +316,9 @@
   }
 
   @media screen and (max-width: 768px) {
+    .banner_btn_ri {
+      display: none;
+    }
     .navbar_link {
       display: none !important;
     }
@@ -337,7 +375,7 @@
   /* main sub detail */
 
   .main_sub_bd {
-    padding: 20px 40px 40px 40px;
+    padding: 15px 18px 15px 18px;
   }
 
   .main_sub_detal {
@@ -363,12 +401,12 @@
   .card_logo {
     border-radius: 50%;
     position: absolute;
-    top: 27%;
+    top: 160px;
     left: 50%;
     transform: translate(-50%, 0);
     z-index: 1;
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
 
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   }
@@ -389,10 +427,10 @@
 
   .congrate_child_after {
     position: absolute;
-    bottom: 0;
+    bottom: -50px;
     right: 0;
     width: 90%;
-
+    // background-image: url();
     background-color: white;
     border-radius: 5px 5px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
@@ -540,6 +578,9 @@
     }
   }
   @media screen and (max-width: 768px) {
+    .card_main_container:hover {
+      transform: unset;
+    }
     .body_container {
       flex-direction: column-reverse !important;
       background-color: #eeeeee;
@@ -602,8 +643,14 @@
     }
   }
 
+  .titleXl {
+    font-size: unset !important;
+    font-weight: 700;
+  }
+
   h6 {
     font-size: 0.8rem;
+    margin: 0;
   }
 
   .doContent {
@@ -623,6 +670,36 @@
     -webkit-line-clamp: 10;
     -webkit-box-orient: vertical;
     max-height: 20rem;
+  }
+
+  .card-bodys {
+    padding: 5px 10px 5px 10px !important;
+  }
+
+  h5 {
+    margin: 0;
+  }
+  .boxC {
+    position: absolute;
+    bottom: 5%;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .prefix_card {
+    min-height: 400px;
+  }
+
+  .mo-ta {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    max-height: 10rem;
+    text-align: justify;
   }
 
   .undoRemoveContent {
@@ -678,7 +755,6 @@
   }
 
   .head_z {
-    line-height: 1.6rem;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 1;
@@ -703,16 +779,6 @@
     padding: 10px 20px;
     background-color: white;
     border-radius: 2.5px 2.5px;
-  }
-
-  .card_main_container {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  }
-
-  .card_main_container:hover {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;
-    transform: translateY(-1%);
   }
 
   @media screen and (max-width: 992px) and (min-width: 577px) {
@@ -806,21 +872,28 @@
 
   .owl-theme .owl-nav {
     position: absolute;
-    top: 30%;
+    top: 5%;
     right: 0;
     left: 0;
     display: flex !important;
     justify-content: space-between;
     align-items: center;
     text-align: unset;
+    opacity: 0.5;
+  }
+
+  .owl-theme .owl-nav {
+    &:hover {
+      opacity: 1;
+    }
   }
 
   .owl_text {
-    line-height: 1.6rem;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
+    max-height: 5rem;
   }
 
   @media screen and (max-width: 600px) {
@@ -979,6 +1052,197 @@
 
     .chen {
       margin: 0 !important;
+    }
+  }
+
+  .decrease {
+    animation: change-color 1s linear infinite;
+  }
+
+  @keyframes change-color {
+    0% {
+      color: red;
+    }
+
+    25% {
+      color: #c850c0;
+    }
+
+    50% {
+      color: #4158d0;
+    }
+
+    75% {
+      color: purple;
+    }
+  }
+
+  .chi-tiet {
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    color: brown;
+    border-radius: 50%;
+    font-size: 12px;
+    font-weight: bold;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+      rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  }
+
+  .gioiThieuPortal {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    max-height: 6rem;
+    margin-top: 0px !important;
+  }
+
+  .qb {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+
+  .qc {
+    border-bottom-left-radius: 5px;
+  }
+
+  .qd {
+    border-bottom-right-radius: 5px;
+  }
+
+  .main_panel {
+    display: flex;
+    justify-content: center;
+    gap: 10rem;
+  }
+
+  @media screen and (max-width: 768px) {
+    .main_panel {
+      flex-direction: column;
+      gap: 2rem;
+    }
+  }
+
+  .banner_btn_rout {
+    position: relative;
+  }
+  .banner_btn_ri {
+    position: absolute !important;
+    top: 53%;
+    left: 22%;
+    z-index: 999;
+    width: 200px;
+    height: 50px;
+  }
+
+  .button-49,
+  .button-49:after {
+    width: 200px;
+    height: 50px;
+    // line-height: 78px;
+    font-size: 1.2rem;
+    font-weight: 900;
+    background: linear-gradient(45deg, transparent 5%, #ff013c 5%);
+    border: 0;
+    color: #fff;
+    letter-spacing: 3px;
+    box-shadow: 6px 0px 0px #00e6f6;
+    outline: transparent;
+    position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+
+  .button-49:after {
+    --slice-0: inset(50% 50% 50% 50%);
+    --slice-1: inset(80% -6px 0 0);
+    --slice-2: inset(50% -6px 30% 0);
+    --slice-3: inset(10% -6px 85% 0);
+    --slice-4: inset(40% -6px 43% 0);
+    --slice-5: inset(80% -6px 5% 0);
+
+    content: "ALTERNATE TEXT";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(
+      45deg,
+      transparent 3%,
+      #00e6f6 3%,
+      #00e6f6 5%,
+      #ff013c 5%
+    );
+    text-shadow: -3px -3px 0px #f8f005, 3px 3px 0px #00e6f6;
+    clip-path: var(--slice-0);
+  }
+
+  .button-49:hover:after {
+    animation: 1s glitch;
+    animation-timing-function: steps(2, end);
+  }
+
+  @keyframes glitch {
+    0% {
+      clip-path: var(--slice-1);
+      transform: translate(-20px, -10px);
+    }
+    10% {
+      clip-path: var(--slice-3);
+      transform: translate(10px, 10px);
+    }
+    20% {
+      clip-path: var(--slice-1);
+      transform: translate(-10px, 10px);
+    }
+    30% {
+      clip-path: var(--slice-3);
+      transform: translate(0px, 5px);
+    }
+    40% {
+      clip-path: var(--slice-2);
+      transform: translate(-5px, 0px);
+    }
+    50% {
+      clip-path: var(--slice-3);
+      transform: translate(5px, 0px);
+    }
+    60% {
+      clip-path: var(--slice-4);
+      transform: translate(5px, 10px);
+    }
+    70% {
+      clip-path: var(--slice-2);
+      transform: translate(-10px, 10px);
+    }
+    80% {
+      clip-path: var(--slice-5);
+      transform: translate(20px, -10px);
+    }
+    90% {
+      clip-path: var(--slice-1);
+      transform: translate(-10px, 0px);
+    }
+    100% {
+      clip-path: var(--slice-1);
+      transform: translate(0);
+    }
+  }
+
+  @media (min-width: 768px) {
+    .button-49,
+    .button-49:after {
+      width: 200px;
+      height: 50px;
+      // line-height: 88px;
     }
   }
 }
