--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -680,10 +680,7 @@
     margin: 0;
   }
   .boxC {
-    position: absolute;
-    bottom: -13px;
-    left: 0;
-    right: 0;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1277,8 +1274,6 @@
   }
 
   .btn-khhoc {
-    position: absolute;
-    bottom: -20px;
     left: 0;
     right: 0;
   }
