--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -680,7 +680,10 @@
     margin: 0;
   }
   .boxC {
-    margin-top: 10px;
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -695,7 +698,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
-    max-height: 10rem;
+    height: 5.3rem;
     text-align: justify;
   }
 
@@ -1274,6 +1277,8 @@
   }
 
   .btn-khhoc {
+    position: absolute;
+    bottom: 0;
     left: 0;
     right: 0;
   }
