--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1404,6 +1404,7 @@
     padding: 12px 8px;
     display: flex;
     overflow-y: scroll;
+    margin-bottom: 8px;
   }
 
   .menu-khoa-hoc::-webkit-scrollbar {
