--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1501,4 +1501,34 @@
       font-weight: bold;
     }
   }
+
+  .text-kien-thuc-a {
+    --s: 0.1em; /* the thickness of the line */
+    --c: #2c6fff; /* the color */
+
+    color: #0000;
+    padding-bottom: var(--s);
+    background: linear-gradient(90deg, var(--c) 50%, #000 0)
+        calc(100% - var(--_p, 0%)) / 200% 100%,
+      linear-gradient(var(--c) 0 0) 0% 100% / var(--_p, 0%) var(--s) no-repeat;
+    -webkit-background-clip: text, padding-box;
+    background-clip: text, padding-box;
+    transition: 0.5s;
+  }
+  .text-kien-thuc {
+    --s: 0.1em; /* the thickness of the line */
+    --c: #ff2c2c; /* the color */
+
+    color: #0000;
+    padding-bottom: var(--s);
+    background: linear-gradient(90deg, var(--c) 50%, #000 0)
+        calc(100% - var(--_p, 0%)) / 200% 100%,
+      linear-gradient(var(--c) 0 0) 0% 100% / var(--_p, 0%) var(--s) no-repeat;
+    -webkit-background-clip: text, padding-box;
+    background-clip: text, padding-box;
+    transition: 0.5s;
+  }
+  .wrapper_lsp:hover {
+    --_p: 100%;
+  }
 }
