--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1,6 +1,9 @@
 #app-portal {
   // start footer
   font-family: "SF Pro Display";
+  .cursor-pointer {
+    cursor: pointer !important;
+  }
   .tieu-de {
     font-weight: 700 !important;
   }
@@ -9,7 +12,11 @@
     text-decoration: none;
     cursor: pointer;
   }
-
+  .card-title {
+    color: #082346;
+    font-size: 19px;
+    font-weight: bold;
+  }
   .text_f:hover {
     opacity: 0.8;
     border-bottom: 3px solid #ecf5f7;
@@ -193,11 +200,11 @@
     padding: 8px 5px;
   }
 
-  .sups::before,
+  // .sups::before,
   .sups::after {
     content: "";
     position: absolute;
-    height: 3px;
+    height: 2px;
     width: 0;
     background-color: rgb(225, 25, 25);
     transition: 0.5s;
@@ -205,7 +212,7 @@
 
   .sups::after {
     left: 0;
-    bottom: -10px;
+    bottom: -5px;
   }
 
   .sups::before {
@@ -289,7 +296,7 @@
 
   .header_btn {
     border: none;
-    padding: 5px 10px;
+    padding: 5px 15px;
     font-size: calc(1rem * 0.9);
     font-weight: bold;
     border-radius: 5px 5px;
@@ -426,7 +433,7 @@
       rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   }
 
-  .card_main_container:hover {
+  .card_main_container .wrapper_card:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;
     transform: translateY(-1%);
   }
@@ -706,20 +713,18 @@
   }
 
   .card-bodys {
-    padding: 5px 10px 5px 10px !important;
+    padding: 9px 10px 5px 10px !important;
   }
 
   h5 {
     margin: 0;
   }
   .boxC {
-    position: absolute;
-    bottom: 12px;
-    left: 0;
-    right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
+    margin-bottom: 5px;
   }
 
   .prefix_card {
@@ -790,7 +795,7 @@
   .head_z {
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 1;
+    // -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     max-height: 3.2rem;
   }
@@ -857,8 +862,15 @@
     color: red !important;
   }
 
+  .owl-stage-outer {
+    border: 1px solid #e9e9e9;
+    border: thin solid #f2dfc8;
+    border-top: 5px solid #f5ca99;
+    background: #fff9f2;
+  }
+  
   .card_carosel {
-    padding: 15px 7.5px;
+    padding: 15px 9px;
   }
 
   .owl-carousel.owl-loaded {
@@ -868,7 +880,7 @@
   button.owl-next {
     font-size: 5rem;
     z-index: 999;
-    color: white;
+    // color: white;
   }
 
   button.owl-next:hover {
@@ -878,7 +890,7 @@
   button.owl-prev {
     font-size: 5rem;
     z-index: 999;
-    color: white;
+    // color: white;
   }
 
   button.owl-prev:hover {
@@ -905,14 +917,14 @@
 
   .owl-theme .owl-nav {
     position: absolute;
-    top: 5%;
+    top: 10%;
     right: 0;
     left: 0;
     display: flex !important;
     justify-content: space-between;
     align-items: center;
     text-align: unset;
-    opacity: 0.5;
+    // opacity: 0.5;
   }
 
   .owl-theme .owl-nav {
@@ -1126,20 +1138,20 @@
     //   rgba(0, 0, 0, 0.09) 0px 32px 16px;
     position: relative;
     display: block;
-    width: 50px;
-    height: 50px;
+    width: 48px;
+    height: 48px;
     cursor: pointer;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     text-align: center;
-    line-height: 50px;
+    // line-height: 50px;
     color: white;
-    font-size: 10px;
+    font-size: 13px;
     font-weight: bold;
     border: none;
     border-radius: 50%;
-    background-color: #ff9950;
-    box-shadow: 0 0 0 0 #ff995040;
-    animation: pulse 1.5s infinite;
+    background-color: slategray;
+    // box-shadow: 0 0 0 0 #ff995040;
+    // animation: pulse 1.5s infinite;
   }
 
   .chi-tiet:hover {
@@ -1157,8 +1169,8 @@
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
-    max-height: 6rem;
-    margin-top: 0px !important;
+    max-height: 7rem;
+    height: 7rem;
   }
 
   .qb {
@@ -1335,10 +1347,10 @@
   }
 
   .btn-khhoc {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    // position: absolute;
+    // bottom: 0;
+    // left: 0;
+    // right: 0;
   }
 
   .wrapper_card {
