--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -868,7 +868,7 @@
     border-top: 5px solid #f5ca99;
     background: #fff9f2;
   }
-  
+
   .card_carosel {
     padding: 15px 9px;
   }
@@ -1400,7 +1400,7 @@
     width: 400px;
     max-height: 98vh;
     overflow-y: scroll;
-    background-color: white;
+
     display: flex;
     flex-direction: column;
     color: rgb(56, 56, 61);
@@ -1447,17 +1447,41 @@
 
   .kh-child-item-nav-left {
     margin-left: 8px;
+    height: 0;
+    overflow: hidden;
+    transition: 2s;
+  }
+
+  .kh-child-item-nav-left-active {
+    height: auto;
+  }
+
+  .kh-ch-child-text {
+    margin-left: 8px;
+    margin-bottom: 18px;
+    cursor: pointer;
+  }
+
+  .retangle-text-kh {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    max-height: 1.5rem;
+    width: 100%;
   }
 
   .item-mon-hoc {
+    color: #1c1d1f;
     display: flex;
-    padding: 7px 16px;
+    padding: 16px 7px 7px 16px;
     -webkit-box-align: center;
     align-items: center;
     border-radius: 8px;
     transition: all 0.3s ease 0s;
     font-size: 1.2rem;
     margin-bottom: 8px;
+    border-top: 1px solid gainsboro;
   }
 
   .side-right-khoa-hoc {
@@ -1511,6 +1535,8 @@
   }
 
   .kh-arrow {
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
     transform: rotate(180deg);
   }
 
@@ -1658,5 +1684,62 @@
       font-size: 1.5rem;
       font-weight: bold;
     }
+  }
+
+  @media screen and (max-width: 980px) {
+    .side-left-khoa-hoc {
+      display: none !important;
+    }
+  }
+  .left-kh-right-bar {
+    width: 80%;
+  }
+  .right-kh-right-bar {
+    width: 20%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .img-kh-cls {
+    width: 30%;
+    height: 12vw;
+    aspect-ratio: 3/2;
+    object-fit: cover;
+    transition: 2s;
+  }
+
+  .kh-img-right {
+    margin-left: 8px;
+  }
+
+  .kso-kh {
+    cursor: pointer;
+  }
+
+  .timer-kh {
+    font-size: calc(1rem * 0.9);
+  }
+
+  .gia-tien-kh-l {
+    font-size: 1.3rem;
+    color: red;
+    font-weight: bold;
+    text-align: end;
+  }
+
+  .gia-tien-kh-lk {
+    text-decoration: line-through;
+  }
+
+  .text-kh-line-jus {
+    text-align: justify;
+  }
+
+  .left-kh-right-bar:hover .img-kh-cls {
+    filter: brightness(60%);
+  }
+
+  .kh-right-ddil {
+    padding: 0 !important;
   }
 }
