--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1388,7 +1388,6 @@
   }
 
   .container-khoa-hoc {
-    padding: 0 24px 0 24px;
     display: flex;
     position: relative;
   }
@@ -1400,7 +1399,8 @@
     width: 400px;
     max-height: 98vh;
     overflow-y: scroll;
-
+    // box-shadow: rgba(255, 0, 0, 0.05) 0px 6px 24px 0px,
+    //   rgba(255, 0, 0, 0.08) 0px 0px 0px 1px;
     display: flex;
     flex-direction: column;
     color: rgb(56, 56, 61);
@@ -1411,17 +1411,59 @@
     transition: 0.5s;
   }
 
-  .side-left-khoa-hoc-active {
-    width: 0;
+  .accordion-body {
+    padding: 4px 5px;
   }
-  .kh-item-side-left-active {
-    display: block;
+
+  .posp-khso {
+    text-align: justify;
+    line-height: 1.6rem;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    max-height: 8rem;
+  }
+
+  .chio-kh-khso {
+    width: 120px;
+  }
+
+  .popse-khso-p {
+    color: unset;
+  }
+
+  .pim {
+    border: unset;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  }
+
+  .border-popse {
+    cursor: pointer;
+    border: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    border-radius: unset;
+  }
+
+  .accordion-button:not(.collapsed) {
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    box-shadow: unset;
+  }
+
+  .accordion-button:focus {
+    box-shadow: unset;
+  }
+
+  .side-left-khoa-hoc-active {
+    width: 0px;
+    padding: 0;
   }
 
   .kh-item-side-left {
-    position: absolute;
     z-index: -1;
-    transition: 2s;
   }
 
   .side-left-khoa-hoc::-webkit-scrollbar {
@@ -1446,10 +1488,14 @@
   }
 
   .kh-child-item-nav-left {
-    margin-left: 8px;
     height: 0;
     overflow: hidden;
     transition: 2s;
+  }
+
+  .round-kh-text {
+    font-weight: lighter !important;
+    margin-bottom: 4px;
   }
 
   .kh-child-item-nav-left-active {
@@ -1471,24 +1517,28 @@
     width: 100%;
   }
 
+  .pom {
+    border-radius: 0 !important;
+    border: none !important;
+  }
   .item-mon-hoc {
     color: #1c1d1f;
     display: flex;
-    padding: 16px 7px 7px 16px;
     -webkit-box-align: center;
     align-items: center;
-    border-radius: 8px;
     transition: all 0.3s ease 0s;
     font-size: 1.2rem;
     margin-bottom: 8px;
-    border-top: 1px solid gainsboro;
   }
 
   .side-right-khoa-hoc {
-    padding: 0 0 0 16px;
+    padding: 12px 0 0 16px;
     width: 100%;
   }
 
+  .pim {
+    padding: 0 0;
+  }
   .menu-khoa-hoc {
     background-color: white;
     border-radius: 8px;
@@ -1532,6 +1582,7 @@
     -webkit-box-orient: vertical;
     max-height: 1.5rem;
     width: 216px;
+    font-size: 1rem;
   }
 
   .kh-arrow {
@@ -1640,27 +1691,28 @@
   .khoa-hoc-header {
     margin-bottom: 8px;
     .text-kh-header {
-      font-size: 16px;
+      font-size: 1.5rem;
       font-weight: bold;
-      padding: 12px 16px;
-      border: 1px solid black;
-      background-color: white;
+      padding: 2px 8px;
+      color: rgba(214, 3, 3, 0.903);
       cursor: pointer;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
   .kh-search-bar {
-    border: 1px solid black;
-    background-color: white;
+    box-shadow: rgba(214, 3, 3, 0.3) 0px 0px 0px 2px;
+    // background-color: white;
+    margin-left: 8px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 8px;
-    width: 50px;
+    padding: 2px 8px;
+    width: 400px;
     transition: 2s;
     cursor: pointer;
-  }
-  .kh-search-bar-active {
-    width: 30vw !important;
+    align-items: center;
+    border-radius: 4px;
   }
 
   .kh-search-icon-active {
@@ -1668,7 +1720,10 @@
   }
 
   .kh-input {
-    display: none;
+    border: none;
+    outline: none;
+    margin-left: 8px;
+    flex-grow: 1;
   }
   .kh-input-active {
     display: block;
@@ -1679,6 +1734,7 @@
   }
 
   .kh-contain-result {
+    padding-left: 8px;
     opacity: 0.7;
     .kh-result {
       font-size: 1.5rem;
@@ -1692,28 +1748,34 @@
     }
   }
   .left-kh-right-bar {
-    width: 80%;
+    width: 100%;
   }
   .right-kh-right-bar {
-    width: 20%;
+    width: 15%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   .img-kh-cls {
-    width: 30%;
-    height: 12vw;
+    width: 100%;
     aspect-ratio: 3/2;
     object-fit: cover;
+    height: 100%;
     transition: 2s;
   }
 
   .kh-img-right {
     margin-left: 8px;
+    padding: 8px 8px 0 0;
   }
 
   .kso-kh {
     cursor: pointer;
+    box-shadow: rgba(255, 0, 0, 0.05) 0px 6px 24px 0px,
+      rgba(255, 0, 0, 0.08) 0px 0px 0px 1px;
+    height: 210px;
   }
 
   .timer-kh {
@@ -1722,17 +1784,21 @@
 
   .gia-tien-kh-l {
     font-size: 1.3rem;
-    color: red;
+    color: rgba(255, 0, 0, 0.807);
     font-weight: bold;
     text-align: end;
   }
 
-  .gia-tien-kh-lk {
+  .gia-tien-giam-gias {
+    color: #444444;
+    opacity: 0.7;
+    font-size: 0.9rem;
     text-decoration: line-through;
   }
 
   .text-kh-line-jus {
     text-align: justify;
+    font-size: 14px;
   }
 
   .left-kh-right-bar:hover .img-kh-cls {
@@ -1741,5 +1807,34 @@
 
   .kh-right-ddil {
     padding: 0 !important;
+  }
+
+  .slide-father {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+  }
+
+  .slide-child {
+    text-align: center;
+    padding: 8px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .slide-element {
+    height: 70px;
+    width: 95%;
+    box-shadow: rgba(214, 3, 3, 0.3) 0px 0px 0px 2px;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+  }
+
+  .slide-element:hover {
+    background-color: rgba(252, 230, 230, 0.3);
   }
 }
