--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1440,8 +1440,6 @@
 
   .pim {
     border: unset;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   }
 
   .border-popse {
@@ -1842,5 +1840,82 @@
 
   .border-popse:hover img {
     filter: brightness(100%);
+  }
+
+  .gv-kh {
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
+    white-space: nowrap;
+    scroll-behavior: smooth;
+
+    .gv-c {
+      margin-right: 1vw;
+      display: inline-block;
+      width: 100%;
+      height: 170px;
+      overflow-y: hidden;
+    }
+  }
+
+  .accordion-button {
+    width: unset;
+    cursor: pointer;
+  }
+
+  .gv-kh1 {
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
+    white-space: nowrap;
+    scroll-behavior: smooth;
+
+    .gv-c1 {
+      margin-right: 1vw;
+      display: inline-block;
+      width: 100%;
+      height: 200px;
+      overflow-y: hidden;
+      border: 1px solid red;
+    }
+  }
+
+  .kh-sl-ca1 {
+    position: relative;
+    .nextKHNB {
+      position: absolute;
+      right: -10px;
+      top: 58px;
+      font-size: 2.3rem;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+    .nextKHNB:hover {
+      color: rgb(204, 89, 89);
+    }
+
+    .prevKHNB {
+      position: absolute;
+      left: -10px;
+      top: 58px;
+      font-size: 2.3rem;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+    .prevKHNB:hover {
+      color: rgb(204, 89, 89);
+    }
+  }
+
+  .text-kh-nav-leftbar {
+    font-size: 1rem !important;
+    display: flex;
+    align-items: center;
+    font-weight: 400 !important;
+    cursor: pointer;
+  }
+
+  .kh-apeperar {
+    transition: all 2s ease-in-out;
   }
 }
