--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1935,4 +1935,47 @@
     margin-bottom: 8px;
     font-size: 1.5rem;
   }
+
+  .kt-contain-head {
+    background-color: white;
+    border-radius: 4px;
+    padding: 8px 8px;
+    display: flex;
+    height: 610px;
+    gap: 8px;
+    .kt-head-left {
+      width: 60%;
+      height: 70%;
+      .img-head-left {
+        width: 100%;
+        aspect-ratio: 3/2;
+        object-fit: cover;
+      }
+    }
+    .kt-head-right {
+      width: 40%;
+      display: flex;
+      flex-direction: column;
+      gap: 3%;
+      .img-head-righta {
+        width: 100%;
+        height: 48%;
+        .img-head-right {
+          width: 100%;
+          aspect-ratio: 3/2;
+          object-fit: cover;
+        }
+      }
+    }
+  }
+  .kt-contain-slider {
+    background-color: white;
+    border-radius: 4px;
+  }
+
+  .chaos-kt {
+    object-fit: cover;
+    background-position: center;
+    aspect-ratio: 3/2;
+  }
 }
