--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1941,7 +1941,7 @@
     border-radius: 4px;
     padding: 8px 8px;
     display: flex;
-    height: 610px;
+    height: auto;
     gap: 8px;
     .kt-head-left {
       width: 60%;
