--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1406,7 +1406,7 @@
     font-size: 14px;
     line-height: 20px;
     border-radius: 8px;
-    padding: 12px 8px;
+    // padding: 12px 8px;
     transition: 0.5s;
   }
 
@@ -1438,8 +1438,10 @@
   }
 
   .pim {
-    // border: unset;
     border: unset;
+    border-top: 1px solid grey;
+    border-radius: unset;
+    // border: unset unset 1px solid red unset;
   }
 
   .border-popse {
@@ -1468,10 +1470,10 @@
   .kh-item-side-left {
     z-index: -1;
   }
-  .ji-kh {
-    box-shadow: rgb(24 19 19 / 19%) 0px 0px 0px 2px;
-    border-radius: 4px;
-  }
+  // .ji-kh {
+  //   box-shadow: rgb(24 19 19 / 19%) 0px 0px 0px 2px;
+  //   border-radius: 4px;
+  // }
 
   .side-left-khoa-hoc::-webkit-scrollbar {
     display: none;
@@ -1539,7 +1541,13 @@
   }
 
   .kik-kh-kuki {
-    padding-left: 8px;
+    margin-bottom: 8px;
+  }
+
+  .try-kh-ui {
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    padding: 1px;
+    border-radius: 4px;
   }
 
   .side-right-khoa-hoc {
@@ -1719,7 +1727,7 @@
     // margin-left: 8px;
     display: flex;
     padding: 2px 8px;
-    min-width: 200px;
+    min-width: 290.78px;
     transition: 2s;
     cursor: pointer;
     align-items: center;
@@ -1813,21 +1821,20 @@
   }
 
   .slide-father {
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    display: inline-block;
   }
 
   .slide-child {
     text-align: center;
     padding: 8px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 24.13%;
+    display: inline-block;
+    margin-right: 10px;
   }
 
   .slide-element {
     height: 70px;
-    width: 95%;
+    width: 100%;
     box-shadow: #d1d7dc 0px 0px 0px 2px;
     border-radius: 2px;
     cursor: pointer;
@@ -1835,6 +1842,7 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    padding: 0 16px;
   }
 
   .slide-element:hover {
@@ -1851,14 +1859,7 @@
     position: relative;
     white-space: nowrap;
     scroll-behavior: smooth;
-
-    .gv-c {
-      margin-right: 1vw;
-      display: inline-block;
-      width: 100%;
-      height: 170px;
-      overflow-y: hidden;
-    }
+    padding-left: 10px;
   }
 
   .accordion-button {
@@ -1888,7 +1889,7 @@
     .nextKHNB {
       position: absolute;
       right: -10px;
-      top: 58px;
+      top: 50px;
       font-size: 2.3rem;
       cursor: pointer;
       transition: 0.2s;
@@ -1900,7 +1901,7 @@
     .prevKHNB {
       position: absolute;
       left: -10px;
-      top: 58px;
+      top: 50px;
       font-size: 2.3rem;
       cursor: pointer;
       transition: 0.2s;
@@ -1916,13 +1917,16 @@
     align-items: center;
     font-weight: 400 !important;
     cursor: pointer;
-    padding-left: 8px;
+    // padding-left: 8px;
   }
 
   .kh-apeperar {
     transition: all 2s ease-in-out;
   }
 
+  .full-kt-box {
+    padding-left: 8px;
+  }
   .mob-kh-btn {
     border: 4px;
     display: inline-block;
@@ -1939,10 +1943,10 @@
   .kt-contain-head {
     background-color: white;
     border-radius: 4px;
-    padding: 8px 8px;
+    // padding: 8px 8px;
     display: flex;
     height: auto;
-    gap: 8px;
+    // gap: 8px;
     .kt-head-left {
       width: 60%;
       height: 70%;
@@ -1956,10 +1960,10 @@
       width: 40%;
       display: flex;
       flex-direction: column;
-      gap: 3%;
       .img-head-righta {
         width: 100%;
-        height: 48%;
+        height: 50%;
+        position: relative;
         .img-head-right {
           width: 100%;
           aspect-ratio: 3/2;
@@ -1968,6 +1972,7 @@
       }
     }
   }
+
   .kt-contain-slider {
     background-color: white;
     border-radius: 4px;
@@ -2002,5 +2007,17 @@
         }
       }
     }
+  }
+
+  .img-head-rightab {
+    position: absolute;
+    display: none;
+  }
+  .img-head-righta:hover .img-head-rightab {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.5);
+    z-index: 999;
   }
 }
