--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1829,6 +1829,7 @@
     display: inline-block;
     margin-right: 10px;
     position: relative;
+    border-radius: 3px 3px;
   }
 
   .img-fli-kh-ojo {
